<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="search_courses">Search courses…</string>
    <string name="autor">Автор</string>
    <string name="begin_course">Начать курс</string>
    <string name="about_course">О курсе</string>
    <string name="go_to_platform">Перейти на платформу</string>
    <string name="large_text_example"><![CDATA[У вас будет 7 видеоуроков в высоком качестве. На них спикер объясняет теорию и показывает как выполнять практические задания. Доступ к материалам сохраняется на 2 года Кроме теоретических материалов вас ждут тесты и практические задания. Они помогут лучше запомнить новую информацию]]></string>
    <string name="empty_search">Введите запрос для поиска курсов</string>
    <string name="no_results">По вашему запросу ничего не найдено</string>
    <string name="add_to_favorites">Добавить в избранное</string>
    <string name="remove_from_favorites">Удалить из избранного</string>
</resources>
