<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark"
    android:theme="@style/Theme.Stepic">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/space_16" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/space_16" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_autor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/space_16"
        app:barrierAllowsGoneWidgets="true"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="autor_icon, autor_title, autor_name"
        app:layout_constraintEnd_toEndOf="@id/right_guide"
        app:layout_constraintStart_toStartOf="@id/left_guide" />

    <ImageView
        android:id="@+id/title_image"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/cover" />

    <TextView
        android:id="@+id/title_name"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="@dimen/space_16"
        android:gravity="start|center_vertical"
        android:textColor="@color/white"
        android:textSize="26sp"
        app:layout_constraintTop_toBottomOf="@id/title_image"
        tools:text="Java-разработчик с нуля" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/autor_icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="@dimen/space_16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_name"
        tools:src="@drawable/cover" />

    <TextView
        android:id="@+id/autor_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/space_12"
        android:textColor="@color/white_50"
        android:textSize="@dimen/font_12"
        app:layout_constraintStart_toEndOf="@id/autor_icon"
        app:layout_constraintTop_toTopOf="@id/autor_icon"
        tools:text="@string/autor" />

    <TextView
        android:id="@+id/autor_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/space_16"
        android:paddingStart="@dimen/space_12"
        android:textColor="@color/white"
        android:textSize="@dimen/font_16"
        app:layout_constraintStart_toEndOf="@id/autor_icon"
        app:layout_constraintTop_toBottomOf="@id/autor_title"
        tools:text="Merion Academy" />

    <Button
        android:id="@+id/begin_course_button"
        style="@style/button_green"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginHorizontal="@dimen/space_16"
        android:layout_marginTop="@dimen/space_32"
        android:background="@drawable/splach_button"
        android:text="@string/begin_course"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/autor_icon" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/go_to_platform_button"
        style="@style/button_light_gray"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginHorizontal="@dimen/space_16"
        android:layout_marginTop="@dimen/space_8"
        android:backgroundTint="@color/light_gray"
        android:text="@string/go_to_platform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/begin_course_button" />

    <TextView
        android:id="@+id/about_course_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_16"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/about_course"
        android:textColor="@color/white"
        android:textSize="26sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/go_to_platform_button" />

    <TextView
        android:id="@+id/content_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/space_16"
        android:fontFamily="@font/roboto_regular"
        android:textColor="@color/white_70"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/about_course_tv"
        tools:text="@string/large_text_example" />
</androidx.constraintlayout.widget.ConstraintLayout>